--- a/CinePicker/Common/Components/FailedLoadingUIView.xib
+++ b/CinePicker/Common/Components/FailedLoadingUIView.xib
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="KCj-ek-YmK" customClass="FailedLoadingUIView" customModule="MoviePicker" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="KCj-ek-YmK" userLabel="Failed Loading UI View" customClass="FailedLoadingUIView" customModule="CinePicker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="374" height="669"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Couldn't load data..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v48-SZ-1KO">
-                    <rect key="frame" x="106" y="84" width="162" height="21.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22G-uv-oul">
-                    <rect key="frame" x="156.5" y="109.5" width="61" height="36"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <state key="normal" title="Reload"/>
-                    <connections>
-                        <action selector="onTouchDown:" destination="KCj-ek-YmK" eventType="touchDown" id="b6r-gp-lCP"/>
-                    </connections>
-                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bop-2A-nwU" userLabel="Content View">
+                    <rect key="frame" x="0.0" y="0.0" width="374" height="669"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Couldn't load data..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v48-SZ-1KO">
+                            <rect key="frame" x="106" y="64" width="162" height="21.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22G-uv-oul">
+                            <rect key="frame" x="156.5" y="89.5" width="61" height="36"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="Reload"/>
+                            <connections>
+                                <action selector="onTouchDown:" destination="KCj-ek-YmK" eventType="touchDown" id="b6r-gp-lCP"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="22G-uv-oul" firstAttribute="top" secondItem="v48-SZ-1KO" secondAttribute="bottom" constant="4" id="0Un-kc-mli"/>
+                        <constraint firstItem="v48-SZ-1KO" firstAttribute="top" secondItem="Bop-2A-nwU" secondAttribute="top" constant="64" id="E0Y-Yv-3yx"/>
+                        <constraint firstItem="22G-uv-oul" firstAttribute="centerX" secondItem="Bop-2A-nwU" secondAttribute="centerX" id="H3u-8A-2pT"/>
+                        <constraint firstItem="v48-SZ-1KO" firstAttribute="centerX" secondItem="Bop-2A-nwU" secondAttribute="centerX" id="f7i-LC-ImJ"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="v48-SZ-1KO" firstAttribute="top" secondItem="y7k-h9-OZy" secondAttribute="top" constant="64" id="3aw-fN-grn"/>
-                <constraint firstItem="v48-SZ-1KO" firstAttribute="centerX" secondItem="KCj-ek-YmK" secondAttribute="centerX" id="FQR-dd-awA"/>
-                <constraint firstItem="22G-uv-oul" firstAttribute="top" secondItem="v48-SZ-1KO" secondAttribute="bottom" constant="4" id="aYO-bc-GwK"/>
-                <constraint firstItem="22G-uv-oul" firstAttribute="centerX" secondItem="KCj-ek-YmK" secondAttribute="centerX" id="k5b-sB-ruy"/>
+                <constraint firstItem="Bop-2A-nwU" firstAttribute="leading" secondItem="KCj-ek-YmK" secondAttribute="leading" id="T4c-pL-Jhy"/>
+                <constraint firstItem="Bop-2A-nwU" firstAttribute="top" secondItem="KCj-ek-YmK" secondAttribute="top" id="u5L-qk-cun"/>
+                <constraint firstAttribute="bottom" secondItem="Bop-2A-nwU" secondAttribute="bottom" id="uVK-x1-kFy"/>
+                <constraint firstAttribute="trailing" secondItem="Bop-2A-nwU" secondAttribute="trailing" id="v7x-5k-VIu"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
