--- a/CinePicker/Common/Components/LoadingTableViewCell.xib
+++ b/CinePicker/Common/Components/LoadingTableViewCell.xib
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="jS3-Qg-aQm" customClass="LoadingTableViewCell" customModule="MoviePicker" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="jS3-Qg-aQm" customClass="LoadingTableViewCell" customModule="CinePicker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ySI-fI-EzP">
-                    <rect key="frame" x="169" y="21.5" width="37" height="37"/>
-                    <color key="color" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </activityIndicatorView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iQg-pe-8aZ" userLabel="Content View">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                    <subviews>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ySI-fI-EzP">
+                            <rect key="frame" x="169" y="21.5" width="37" height="37"/>
+                        </activityIndicatorView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="ySI-fI-EzP" firstAttribute="centerY" secondItem="iQg-pe-8aZ" secondAttribute="centerY" id="BDU-FB-ebM"/>
+                        <constraint firstItem="ySI-fI-EzP" firstAttribute="centerX" secondItem="iQg-pe-8aZ" secondAttribute="centerX" id="yvD-FH-jLm"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="ySI-fI-EzP" firstAttribute="centerY" secondItem="jS3-Qg-aQm" secondAttribute="centerY" id="abP-22-pPO"/>
-                <constraint firstItem="ySI-fI-EzP" firstAttribute="centerX" secondItem="jS3-Qg-aQm" secondAttribute="centerX" id="cdG-DY-Ggv"/>
+                <constraint firstAttribute="bottom" secondItem="iQg-pe-8aZ" secondAttribute="bottom" id="Jie-t9-g64"/>
+                <constraint firstItem="iQg-pe-8aZ" firstAttribute="top" secondItem="jS3-Qg-aQm" secondAttribute="top" id="UKA-iX-Ef2"/>
+                <constraint firstItem="iQg-pe-8aZ" firstAttribute="leading" secondItem="N97-sz-zdy" secondAttribute="leading" id="hPP-tv-ec3"/>
+                <constraint firstItem="N97-sz-zdy" firstAttribute="trailing" secondItem="iQg-pe-8aZ" secondAttribute="trailing" id="piO-hj-vXm"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
