--- a/CinePicker/Common/Components/MessageUIView.xib
+++ b/CinePicker/Common/Components/MessageUIView.xib
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="4M7-6S-JCj" customClass="MessageUIView" customModule="MoviePicker" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="4M7-6S-JCj" userLabel="Message UI View" customClass="MessageUIView" customModule="CinePicker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="370" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bo-nz-8Xw">
-                    <rect key="frame" x="148.5" y="84" width="73" height="22"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Za9-dP-PZd" userLabel="Content View">
+                    <rect key="frame" x="0.0" y="0.0" width="370" height="667"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bo-nz-8Xw">
+                            <rect key="frame" x="148.5" y="64" width="73" height="22"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="5bo-nz-8Xw" firstAttribute="centerX" secondItem="Za9-dP-PZd" secondAttribute="centerX" id="QbB-Dh-h9k"/>
+                        <constraint firstItem="5bo-nz-8Xw" firstAttribute="top" secondItem="Za9-dP-PZd" secondAttribute="top" constant="64" id="iPC-EX-egc"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="5bo-nz-8Xw" firstAttribute="centerX" secondItem="4M7-6S-JCj" secondAttribute="centerX" id="vqt-0M-5yU"/>
-                <constraint firstItem="5bo-nz-8Xw" firstAttribute="top" secondItem="O7L-n3-dC5" secondAttribute="top" constant="64" id="wpt-uA-Gmd"/>
+                <constraint firstItem="Za9-dP-PZd" firstAttribute="top" secondItem="4M7-6S-JCj" secondAttribute="top" id="2bX-tG-kjo"/>
+                <constraint firstAttribute="trailing" secondItem="Za9-dP-PZd" secondAttribute="trailing" id="Okc-HY-i7k"/>
+                <constraint firstAttribute="bottom" secondItem="Za9-dP-PZd" secondAttribute="bottom" id="ciI-gB-KZo"/>
+                <constraint firstItem="Za9-dP-PZd" firstAttribute="leading" secondItem="4M7-6S-JCj" secondAttribute="leading" id="ybp-cG-m00"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
