--- a/CinePicker/Common/Components/MovieTableViewCell.xib
+++ b/CinePicker/Common/Components/MovieTableViewCell.xib
@@ -11,86 +11,97 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="LTb-pG-xSv" userLabel="Content View" customClass="MovieTableViewCell" customModule="MoviePicker" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="LTb-pG-xSv" customClass="MovieTableViewCell" customModule="CinePicker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_movie_image" translatesAutoresizingMaskIntoConstraints="NO" id="sgF-xJ-6yN">
-                    <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="sgF-xJ-6yN" secondAttribute="height" multiplier="3:4" id="61i-Tv-ifI"/>
-                    </constraints>
-                </imageView>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="aPd-bn-Sy8">
-                    <rect key="frame" x="20" y="30" width="20" height="20"/>
-                </activityIndicatorView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bmn-Pm-LQQ">
-                    <rect key="frame" x="76" y="8" width="291" height="24"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QVe-AU-tJV">
-                    <rect key="frame" x="76" y="32" width="291" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47C-hP-1Gr">
-                    <rect key="frame" x="76" y="54" width="30.5" height="18"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCM-U3-HG5" userLabel="Content View">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHQ-Wf-sEa">
-                            <rect key="frame" x="0.0" y="0.0" width="30.5" height="18"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="7R6-dG-0tF">
-                    <rect key="frame" x="320" y="52" width="47" height="20"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ltt-3m-28c">
-                            <rect key="frame" x="0.0" y="0.0" width="14" height="20"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="suQ-Ly-iSg">
-                            <rect key="frame" x="18" y="0.0" width="7" height="20"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_movie_image" translatesAutoresizingMaskIntoConstraints="NO" id="sgF-xJ-6yN">
+                            <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="sgF-xJ-6yN" secondAttribute="height" multiplier="3:4" id="61i-Tv-ifI"/>
+                            </constraints>
+                        </imageView>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="aPd-bn-Sy8">
+                            <rect key="frame" x="20" y="30" width="20" height="20"/>
+                        </activityIndicatorView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bmn-Pm-LQQ">
+                            <rect key="frame" x="76" y="8" width="291" height="24"/>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBt-9R-PZM">
-                            <rect key="frame" x="29" y="0.0" width="18" height="20"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                            <nil key="textColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QVe-AU-tJV">
+                            <rect key="frame" x="76" y="32" width="291" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47C-hP-1Gr">
+                            <rect key="frame" x="76" y="54" width="30.5" height="18"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHQ-Wf-sEa">
+                                    <rect key="frame" x="0.0" y="0.0" width="30.5" height="18"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="7R6-dG-0tF">
+                            <rect key="frame" x="320" y="52" width="47" height="20"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ltt-3m-28c">
+                                    <rect key="frame" x="0.0" y="0.0" width="14" height="20"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="suQ-Ly-iSg">
+                                    <rect key="frame" x="18" y="0.0" width="7" height="20"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBt-9R-PZM">
+                                    <rect key="frame" x="29" y="0.0" width="18" height="20"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="brE-bV-H3A"/>
+                            </constraints>
+                        </stackView>
                     </subviews>
+                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="20" id="brE-bV-H3A"/>
+                        <constraint firstItem="bmn-Pm-LQQ" firstAttribute="leading" secondItem="sgF-xJ-6yN" secondAttribute="trailing" constant="16" id="6tW-Qj-arw"/>
+                        <constraint firstItem="47C-hP-1Gr" firstAttribute="leading" secondItem="sgF-xJ-6yN" secondAttribute="trailing" constant="16" id="72B-p7-LUd"/>
+                        <constraint firstItem="aPd-bn-Sy8" firstAttribute="centerY" secondItem="JCM-U3-HG5" secondAttribute="centerY" id="8Tb-bI-2BR"/>
+                        <constraint firstAttribute="trailing" secondItem="QVe-AU-tJV" secondAttribute="trailing" constant="8" id="DsG-P0-Fhq"/>
+                        <constraint firstAttribute="bottom" secondItem="7R6-dG-0tF" secondAttribute="bottom" constant="8" id="FMg-0f-VdP"/>
+                        <constraint firstItem="QVe-AU-tJV" firstAttribute="leading" secondItem="sgF-xJ-6yN" secondAttribute="trailing" constant="16" id="YS3-Zg-6Gs"/>
+                        <constraint firstItem="bmn-Pm-LQQ" firstAttribute="top" secondItem="JCM-U3-HG5" secondAttribute="top" constant="8" id="Yef-4A-CzQ"/>
+                        <constraint firstItem="aPd-bn-Sy8" firstAttribute="leading" secondItem="JCM-U3-HG5" secondAttribute="leading" constant="20" id="bfw-gw-Ggu"/>
+                        <constraint firstItem="sgF-xJ-6yN" firstAttribute="leading" secondItem="JCM-U3-HG5" secondAttribute="leading" id="cpL-Kd-2Nj"/>
+                        <constraint firstItem="QVe-AU-tJV" firstAttribute="top" secondItem="bmn-Pm-LQQ" secondAttribute="bottom" id="ea1-lA-GIW"/>
+                        <constraint firstAttribute="bottom" secondItem="sgF-xJ-6yN" secondAttribute="bottom" id="fps-NK-1dv"/>
+                        <constraint firstAttribute="bottom" secondItem="47C-hP-1Gr" secondAttribute="bottom" constant="8" id="oaM-A3-cn9"/>
+                        <constraint firstItem="sgF-xJ-6yN" firstAttribute="top" secondItem="JCM-U3-HG5" secondAttribute="top" id="oiM-id-eMA"/>
+                        <constraint firstAttribute="trailing" secondItem="bmn-Pm-LQQ" secondAttribute="trailing" constant="8" id="qZX-tm-K3e"/>
+                        <constraint firstAttribute="trailing" secondItem="7R6-dG-0tF" secondAttribute="trailing" constant="8" id="w1P-hu-VK1"/>
                     </constraints>
-                </stackView>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="sgF-xJ-6yN" secondAttribute="bottom" id="3Jf-Mm-2Ca"/>
-                <constraint firstItem="iVN-9g-U4a" firstAttribute="trailing" secondItem="7R6-dG-0tF" secondAttribute="trailing" constant="8" id="3u1-PZ-ems"/>
-                <constraint firstItem="bmn-Pm-LQQ" firstAttribute="top" secondItem="iVN-9g-U4a" secondAttribute="top" constant="8" id="4oi-Rj-6Rd"/>
-                <constraint firstItem="aPd-bn-Sy8" firstAttribute="leading" secondItem="LTb-pG-xSv" secondAttribute="leading" constant="20" id="992-S2-4EV"/>
-                <constraint firstItem="sgF-xJ-6yN" firstAttribute="top" secondItem="LTb-pG-xSv" secondAttribute="top" id="GoW-5r-Cvg"/>
-                <constraint firstItem="iVN-9g-U4a" firstAttribute="trailing" secondItem="QVe-AU-tJV" secondAttribute="trailing" constant="8" id="Imr-Tz-z8f"/>
-                <constraint firstItem="aPd-bn-Sy8" firstAttribute="centerY" secondItem="LTb-pG-xSv" secondAttribute="centerY" id="JhT-yj-VKO"/>
-                <constraint firstItem="iVN-9g-U4a" firstAttribute="bottom" secondItem="47C-hP-1Gr" secondAttribute="bottom" constant="8" id="Kae-ba-m1d"/>
-                <constraint firstItem="bmn-Pm-LQQ" firstAttribute="leading" secondItem="sgF-xJ-6yN" secondAttribute="trailing" constant="16" id="LUW-N6-aWk"/>
-                <constraint firstItem="47C-hP-1Gr" firstAttribute="leading" secondItem="sgF-xJ-6yN" secondAttribute="trailing" constant="16" id="WhB-JT-v5e"/>
-                <constraint firstItem="QVe-AU-tJV" firstAttribute="leading" secondItem="sgF-xJ-6yN" secondAttribute="trailing" constant="16" id="a55-L8-sT6"/>
-                <constraint firstItem="iVN-9g-U4a" firstAttribute="bottom" secondItem="7R6-dG-0tF" secondAttribute="bottom" constant="8" id="fsk-QT-nCj"/>
-                <constraint firstItem="QVe-AU-tJV" firstAttribute="top" secondItem="bmn-Pm-LQQ" secondAttribute="bottom" id="j9T-Qs-IJb"/>
-                <constraint firstItem="iVN-9g-U4a" firstAttribute="trailing" secondItem="bmn-Pm-LQQ" secondAttribute="trailing" constant="8" id="owq-yF-Tbd"/>
-                <constraint firstItem="sgF-xJ-6yN" firstAttribute="leading" secondItem="iVN-9g-U4a" secondAttribute="leading" id="vM6-n3-mjR"/>
+                <constraint firstItem="JCM-U3-HG5" firstAttribute="top" secondItem="LTb-pG-xSv" secondAttribute="top" id="2fs-u6-ZDg"/>
+                <constraint firstAttribute="bottom" secondItem="JCM-U3-HG5" secondAttribute="bottom" id="7th-2C-9Px"/>
+                <constraint firstItem="JCM-U3-HG5" firstAttribute="leading" secondItem="iVN-9g-U4a" secondAttribute="leading" id="V2g-P7-7lu"/>
+                <constraint firstItem="iVN-9g-U4a" firstAttribute="trailing" secondItem="JCM-U3-HG5" secondAttribute="trailing" id="Ww3-ge-DWs"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
